--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cmower</groupId>
-	<artifactId>Maven4Web</artifactId>
+	<artifactId>WebAdvanced</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Maven4Web Maven Webapp</name>
+	<name>WebAdvanced Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<developers>
@@ -73,7 +73,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>Maven4Web</finalName>
+		<finalName>WebAdvanced</finalName>
 		<plugins>
 
 			<plugin>
