--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 			<version>${javax.servlet.version}</version>
 			<scope>provider</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Spring 3 dependencies -->
 		<dependency>
@@ -62,14 +69,14 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-		
+
 		<!-- jstl for jsp page -->
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
