--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:application-context.xml</param-value>
+		<param-value>classpath:application-context.xml,classpath:spring-shiro.xml</param-value>
 	</context-param>
 
 	<listener>
@@ -27,6 +27,20 @@
 		<servlet-name>web-app</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	  <!-- apache-shiro 核心拦截器 -->
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/five/*</url-pattern>
+    </filter-mapping>
 
 	<error-page>
 		<error-code>404</error-code>
