--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
 		</dependency>
 		<!--- end shiro -->
 
+		<dependency>
+			<groupId>com.github.axet</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>0.0.9</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
