--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
 			<version>0.0.9</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
+
 
 	</dependencies>
 
