--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,14 @@
 			<version>20180130</version>
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/org.sitemesh/sitemesh -->
+<dependency>
+    <groupId>org.sitemesh</groupId>
+    <artifactId>sitemesh</artifactId>
+    <version>3.0.1</version>
+</dependency>
+
+
 
 	</dependencies>
 
