--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,11 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
-	
+
 	<listener>
 		<listener-class>com.cmower.common.listener.AppContextInitListener</listener-class>
 	</listener>
-	
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:application-context.xml</param-value>
@@ -16,7 +16,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<servlet>
 		<servlet-name>web-app</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -31,7 +31,18 @@
 		<servlet-name>web-app</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
+
+<filter>
+	<filter-name>sitemesh</filter-name>
+	<filter-class>org.sitemesh.config.ConfigurableSiteMeshFilter</filter-class>
+</filter>
+
+<filter-mapping>
+	<filter-name>sitemesh</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+
+
 	<error-page>
 		<error-code>404</error-code>
 		<location>/404.jsp</location>
